2006-09-30 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/g_hook.c: Added code to g_add_component so that the 
	component is added to the object list properly.

	* src/g_hook.c: Commented out o_redraw_single call to minimize
	flickering.  At some point a g_redraw_all should be added for
	those users who want to use g_component_add from a script.

	* i_callbacks.c: Removed unnecessary redraw and scrollbar calls 
	when adding a new page to minimize flicker

	* lib/system-gschemrc.in: Commented in Carlos' new file-new hook
	and change some of the defaults a little.  No matter what default
	I pick will probably be wrong for somebody (sorry).

2006-09-30 Carlos Nieves Onega <cnieves@iespana.es>

	* include/prototype.h, lib/system-gschemrc.in, src/g_hook.c, 
	  src/g_register.c, src/gschem.c, src/x_window.c:
	  Added a new scheme function to get the objects in a page.
	  Improved the new-page-hook in system-gschemrc so it only adds
	  the titleblock if the page has no objects.

2006-09-28 Carlos Nieves Onega <cnieves@iespana.es>

	* include/globals.h, include/prototype.h, lib/system-gschemrc.in,
	  src/g_hook.c, src/g_register.c, src/globals.c, src/gschem.c,
	  src/i_callbacks.c, src/x_window.c:
	  Added a new page hook, a new add-component function for scheme,
	  and some lines in the system-gschemrc file (commented by default),
	  so gschem can add automatically a symbol when creating a new page.
	  Commenting out these lines can solven bug #1443806 (gschem 
	  zoomed out way to much on startup).
	
2006-09-24 Ales Hvezda   <ahvezda@geda.seul.org>

        * AUTHORS: Greatly simplified the file since the ChangeLog tracks
	who has changed what.  Also added a few missing names that should
	most certainly be in the list.  Also consolidated all AUTHOR files
	for gEDA/gaf into this file.

2006-09-24 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Tweaked glib detection to not fail ./configure 